Dalsi prace na unittestech pro genzone - domain flagy.
git-svn-id: file:///data/svn/enum/pyfred/trunk@4195 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-28 Jan Kryl (version 1.7.1)
+
+	* Unittests for genzone are ready.
+
 2007-09-26 Jan Kryl (version 1.7.0)
 
 	* Mailer is capable of checking for undelivered email messages.
