Dalsi zmeny vylepseni a sjednoceni trunk a 1.7.
git-svn-id: file:///data/svn/enum/pyfred/trunk@4260 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-09-30 Jan Kryl (version 1.7.4)
+
+	* File descriptors closing is done better way (before call to wait).
+	Credits Ondrej Sury.
+
+	* Techchecks were corrected. The situation when DNS server is not
+	responding when domain is not in zone delegated on him was not
+	expected.
+
 2007-09-30 Jan Kryl (version 1.7.3)
 
 	* Periodical technical checks may be turned off without affecting
