Oprava testu recursive4all
git-svn-id: file:///data/svn/enum/pyfred/trunk@4281 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-01 Jan Kryl (version 1.7.5)
+
+	* Techcheck script recursive4all.py is working even for nic.cz domain
+	now.
+
 2007-09-30 Jan Kryl (version 1.7.4)
 
 	* File descriptors closing is done better way (before call to wait).
