Oprava filemanager_clienta, drobne upravy genzone unittestu, pridani noveho unittestu na filemanagera
git-svn-id: file:///data/svn/enum/pyfred/trunk@4295 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* Techcheck script recursive4all.py is working even for nic.cz domain
 	now.
 
+	* Error in condition in filemanager_client was corrected.
+
+	* Basic unittests for filemanager created.
+
 2007-09-30 Jan Kryl (version 1.7.4)
 
 	* File descriptors closing is done better way (before call to wait).
