--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2007-10-01 Jan Kryl (version 1.7.5)
+2007-10-08 Jan Kryl (version 1.7.5)
 
 	* Techcheck script recursive4all.py is working even for nic.cz domain
 	now.
@@ -6,6 +6,9 @@
 	* Error in condition in filemanager_client was corrected.
 
 	* Basic unittests for filemanager created.
+
+	* build_idl target of setup.py doesn't generate IDL stubs if they
+	are already present.
 
 2007-09-30 Jan Kryl (version 1.7.4)
 
