--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2007-10-19 Jan Kryl (version 1.7.6)
+2007-10-22 Jan Kryl (version 1.7.6)
 
 	* Error in techcheck script existence was corrected. Due to the error
 	nameservers which could not be resolved triggered unknown result
@@ -16,6 +16,8 @@
 	nameservers as well.
 
 	* Basic unittests for techcheck created.
+
+	* Mailer produces non-multipart emails if there are no attachments.
 
 2007-10-10 Jan Kryl (version 1.7.5)
 
