Some changes in setup.py file - added new install options, - idl files now created during 'build' phase.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5122 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-28 Ales Dolezal
+		
+		* Build step 'build_ild' merged into 'build' step.
+
+		* pyfred.conf is now teplate, modifiable by options
+	passed to setup.py during install phase.
+
 2008-02-09 Jaromir Talir (version 1.8.0)
 	
         * RPM building, renaming conf files, change package name to
