--- a/ChangeLog
+++ b/ChangeLog
@@ -1,22 +1,26 @@
+2008-06-20 Jaromir Talir, Ales Dolezal (1.9.0)
+	      
+       * Refactoring installation process into separate directory freddist
+
 2008-04-18 Ales Dolezal
 
-		* IDL files are now created automatically during
+	* IDL files are now created automatically during
 	install step. IDL files are searched in directory which
 	location depends on PREFIX variable.
 
-		* Added abilily to run setup.py outside its directory.
+	* Added ability to run setup.py outside its directory.
 	Files that setup.py produced (e.g. python bytecode or
 	source distribution packages) are stored in current working
 	directory.
 
-		* Added some setup command line options (e.g. sysconfdir,
+	* Added some setup command line options (e.g. sysconfdir,
 	localstatedir) for better output emplacement of corresponding files.
 
 2008-03-28 Ales Dolezal
 		
-		* Build step 'build_ild' merged into 'build' step.
+	* Build step 'build_ild' merged into 'build' step.
 
-		* pyfred.conf is now teplate, modifiable by options
+	* pyfred.conf is now teplate, modifiable by options
 	passed to setup.py during install phase.
 
 2008-02-09 Jaromir Talir (version 1.8.0)
